--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "functions-rs"
+name = "whr-rs"
 version = "0.1.0"
 authors = ["Karolis Rusenas <karolis.rusenas@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+serde = { version = "1.0", features = ["derive"] }
+
+serde_json = "1.0"
+base64 = "0.11.0"
