--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "whr-rs"
+name = "whr"
 version = "0.1.0"
 authors = ["Karolis Rusenas <karolis.rusenas@gmail.com>"]
 edition = "2018"
+description = "Library for running functions on Webhook Relay"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
